This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/15/24: Made Autosave Log in Tilt Series menu do just what the help says,
saved after every tlt, and not activate a general autosave (In 4.1).

2/15/24: SEM_4-1-5
2/15/24: Fixed autofocus in hybrid montage being done at image shift of
corner piece in previous block (In 4.1).

2/14/24: Fixed message to log from failure to save log from going into an
infinite loop (In 4.1).

2/12/24: Fixed change in acquire coordinates at binning 4+ when turning on
dose fractionation for K2/K3, broken 7/5/23 (In 4.1).

2/11/24: SEM_4-1-4
2/11/24: Made backspace in Edit mode delete the current polygon if it was
created with autocontouring (In 4.1).

2/7/24: Fixed screwed up hybrid montages when property StageMontageMaxError is
set (In 4.1).

2/4/24: Fixed some problems when completion character is typed in script editor
with Python (In 4.1).

2/4/24: Allowed variables in prompts for userSetDirectory and EnterNameOpenFile
(In 4.1).

2/4/24: Fixed window placement of script editor #60 (In 4.1).

1/31/24: Fixed adjustment when assigning current stage positions to a
Navigator item and improved the "disparity in stage position" reports from
Realign to Item by using just the shifts in the images (In 4.1).

1/31/24: SEM_4-1-3
1/31/24: Fixed output of ReporCameraLength command in STEM mode (In 4.1).

1/28/24: Fixed GoToImagingState command to accept a full name if it is unique
even if it matches the start of another name (In 4.1).

1/25/24: Relaxed defocus criteria for acceptable CTF fit in coma-free
alignment and add suggestion to try lower beam til temporarily (In 4.1).

1/25/24: Adjusted default readout interval for Falcon 4i to give correct
number of frames for 6-sec exposures (In 4.1).
